@@ -1,4 +1,5 @@
 5.2.1 -> 5.2.2:
+    - jbj: ruby: fix: retrofit RSTRING_PTR/RSTRING_LEN into ruby-1.8.5.
     - jbj: solve: loop over solve db's in a bag.
     - jbj: solve: stub-in toy add/del methods.
     - jbj: solve: permit multiple solvedb's in a rpmbag.
